[gd_scene load_steps=4 format=3 uid="uid://jbotciglwwrj"]

[ext_resource type="Script" path="res://bullet.gd" id="1_1ax6c"]
[ext_resource type="Texture2D" uid="uid://livqjv2w75bh" path="res://ressources/bullet.png" id="2_1xrxu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sev0r"]

[node name="Bullet" type="Area2D"]
script = ExtResource("1_1ax6c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.5, -0.5)
texture = ExtResource("2_1xrxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_sev0r")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.075
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_life_timer_timeout"]
